--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-  "name": "@sssserve/framework",
-  "version": "0.0.1",
-  "description": "Description.",
-  "main": "index.js",
-  "scripts": {
-    "test": "ava"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sssserve/framework.git"
-  },
-  "keywords": [
-    "framework",
-    "javascript"
-  ],
-  "author": "Wilson Lewis <wilsonlewis@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sssserve/framework/issues"
-  },
-  "homepage": "https://github.com/sssserve/framework#readme",
-  "devDependencies": {
-    "ava": "^0.22.0"
-  },
-  "ava": {
-    "files": [
-      "tests/**/*.js"
-    ]
-  },
-  "dependencies": {
-    "collect.js": "^3.0.51",
-    "lodash": "^4.17.4"
-  }
+	"name": "@sssserve/framework",
+	"version": "0.0.8",
+	"description": "Description.",
+	"main": "index.js",
+	"scripts": {
+		"test": "ava"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/sssserve/framework.git"
+	},
+	"keywords": [
+		"framework",
+		"javascript"
+	],
+	"author": "Wilson Lewis <wilsonlewis@gmail.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/sssserve/framework/issues"
+	},
+	"homepage": "https://github.com/sssserve/framework#readme",
+	"dependencies": {
+		"@sssservices/build": "^0.0.8",
+		"@sssservices/config": "^0.0.8",
+		"@sssservices/container": "^0.0.8",
+		"@sssservices/content": "^0.0.8",
+		"@sssservices/events": "^0.0.8",
+		"@sssservices/foundation": "^0.0.8",
+		"@sssservices/log": "^0.0.8",
+		"@sssservices/support": "^0.0.8"
+	},
+	"devDependencies": {
+		"ava": "^0.22.0",
+		"collect.js": "^3.0.51",
+		"lodash": "^4.17.4",
+		"semver": "^5.4.1",
+		"yargs": "^10.0.3"
+	},
+	"ava": {
+		"files": [
+			"tests/**/*.js"
+		]
+	}
 }
