--- a/src/@sssservices/container/package.json
+++ b/src/@sssservices/container/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@sssservices/container",
-  "version": "0.0.1",
-  "description": "The Sssservices Container package.",
-  "main": "container.js",
-  "repository": "https://github.com/sssservices/container",
-  "author": "Wilson Lewis <wilsonlewis@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@sssservices/support": "^0.0.1"
-  }
+	"name": "@sssservices/container",
+	"version": "0.0.8",
+	"description": "[READ ONLY] Subtree split of the Sssserve Container component (see @sssserve/framework)",
+	"main": "container.js",
+	"repository": "https://github.com/sssservices/container",
+	"author": "Wilson Lewis <wilsonlewis@gmail.com>",
+	"license": "MIT",
+	"dependencies": {
+		"@sssservices/support": "^0.0.8"
+	}
 }
