--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@sssserve/framework",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"description": "Description.",
 	"main": "index.js",
 	"scripts": {
@@ -21,14 +21,15 @@
 	},
 	"homepage": "https://github.com/sssserve/framework#readme",
 	"dependencies": {
-		"@sssservices/build": "^0.1.0",
-		"@sssservices/config": "^0.1.0",
-		"@sssservices/container": "^0.1.0",
-		"@sssservices/content": "^0.1.0",
-		"@sssservices/events": "^0.1.0",
-		"@sssservices/foundation": "^0.1.0",
-		"@sssservices/log": "^0.1.0",
-		"@sssservices/support": "^0.1.0"
+		"@sssservices/build": "^0.1.1",
+		"@sssservices/config": "^0.1.1",
+		"@sssservices/container": "^0.1.1",
+		"@sssservices/content": "^0.1.1",
+		"@sssservices/events": "^0.1.1",
+		"@sssservices/foundation": "^0.1.1",
+		"@sssservices/log": "^0.1.1",
+		"@sssservices/support": "^0.1.1",
+		"@sssservices/view": "^0.1.1"
 	},
 	"devDependencies": {
 		"ava": "^0.22.0",
